feat: Swagger finals
